implemented items and inventory

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="common.js"></script>
 	<script src="player.js"></script>
 	<script src="npcs.js"></script>
+	<script src="items.js"></script>
 	<script src="input.js"></script>
 	<script src="tiles.js"></script>
 	<script src="game.js"></script>
