--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="https://ondras.github.io/rot.js/rot.js"></script>
 <body>
 	<script src="common.js"></script>
+	<script src="editor.js"></script>
 	<script src="player.js"></script>
 	<script src="npcs.js"></script>
 	<script src="items.js"></script>
