added tile editor

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Javascript Roguelike</title>
 </head>
-<script src="https://ondras.github.io/rot.js/rot.js"></script>
+<script src="rot.js"></script>
 <body>
 	<script src="common.js"></script>
 	<script src="editor.js"></script>
