--- a/tileEditor/tileEditor.html
+++ b/tileEditor/tileEditor.html
@@ -29,6 +29,7 @@
 	<p>Tiles</p>
 	<div id="tiles">
 	</div>
+	<script src="../utils.js"></script>
 	<script src="tileEditor.js"></script>
 </body>
 </html>
