--- a/mapEditor/mapEditor.html
+++ b/mapEditor/mapEditor.html
@@ -16,9 +16,11 @@
 		<a href="">Game</a>
 	</nav>
 	<div id="options">
-		<a>Save map</a>
+		<a id="saveMap">Save map</a>
+		<input type="text" id="mapName">
 	</div>
 		<script src="../common.js"></script>
+		<script src="../utils.js"></script>
 		<script src="mapEditor.js"></script>
 	</body>
 </html>
