--- a/mapEditor/mapEditor.html
+++ b/mapEditor/mapEditor.html
@@ -19,6 +19,9 @@
 		<a id="saveMap">Save map</a>
 		<input type="text" id="mapName">
 	</div>
+	<p>Maps</p>
+	<div id="maps">
+	</div>
 		<script src="../common.js"></script>
 		<script src="../utils.js"></script>
 		<script src="mapEditor.js"></script>
