--- a/mapEditor/mapEditor.html
+++ b/mapEditor/mapEditor.html
@@ -8,7 +8,7 @@
 
 <body>
 	<nav>
-		<a href="">Map</a>
+		<a href="">Maps</a>
 		<a href="">Player</a>
 		<a href="">Npcs</a>
 		<a href="">Objects</a>
