--- a/tileEditor/tileEditor.html
+++ b/tileEditor/tileEditor.html
@@ -7,7 +7,7 @@
 
 <body>
 	<nav>
-		<a href="../mapEditor/mapEditor.html">Map</a>
+		<a href="../mapEditor/mapEditor.html">Maps</a>
 		<a href="">Player</a>
 		<a href="">Npcs</a>
 		<a href="">Objects</a>
