added npcs editor

--- a/npcEditor/npcEditor.html
+++ b/npcEditor/npcEditor.html
@@ -19,17 +19,17 @@
 			<input type="Text" id="character">
 			<label>Description</label>
 			<input type="Text" id="description">
-			<label>Damage</label>
-			<input type="checkbox" id="damage">
-			<label>Solid</label>
-			<input type="checkbox" id="solid">
+			<label>Attack</label>
+			<input type="number" id="attack">
+			<label>Defense</label>
+			<input type="number" id="defense">
 		</form>
-		<a id="save">Save tile</a>
+		<a id="save">Save npc</a>
 
-		<p>Tiles</p>
-		<div id="tiles">
+		<p>Npcs</p>
+		<div id="npcs">
 		</div>
 		<script src="../utils.js"></script>
-		<script src="tileEditor.js"></script>
+		<script src="npcEditor.js"></script>
 	</body>
 </html>
