added mapNpcs and mapUtils

--- a/game/game.html
+++ b/game/game.html
@@ -6,6 +6,7 @@
 <script src="../prototype/player.js"></script>
 <script src="../utils.js"></script>
 <script src="../input.js"></script>
+<script src="../npcUtils.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
