added npcs movement

--- a/tileEditor/tileEditor.html
+++ b/tileEditor/tileEditor.html
@@ -9,10 +9,10 @@
 		<nav>
 			<a href="../mapEditor/mapEditor.html">Maps</a>
 			<a href="">Player</a>
-			<a href="">Npcs</a>
+			<a href="../npcEditor/npcEditor.html">Npcs</a>
 			<a href="">Objects</a>
 			<a href="">Tiles</a>
-			<a href="">Game</a>
+			<a href="../game/game.html">Game</a>
 		</nav>
 		<form>
 			<label>Tile character</label>
