--- a/mapEditor/mapEditor.html
+++ b/mapEditor/mapEditor.html
@@ -10,10 +10,10 @@
 	<nav>
 		<a href="">Maps</a>
 		<a href="">Player</a>
-		<a href="">Npcs</a>
+		<a href="../npcEditor/npcEditor.html">Npcs</a>
 		<a href="">Objects</a>
 		<a href="../tileEditor/tileEditor.html">Tiles</a>
-		<a href="">Game</a>
+		<a href="../game/game.html">Game</a>
 	</nav>
 	<div id="options">
 		<a id="saveMap">Save map</a>
