--- a/npcEditor/npcEditor.html
+++ b/npcEditor/npcEditor.html
@@ -11,8 +11,8 @@
 			<a href="">Player</a>
 			<a href="">Npcs</a>
 			<a href="">Objects</a>
-			<a href="">Tiles</a>
-			<a href="">Game</a>
+			<a href="../tileEditor/tileEditor.html">Tiles</a>
+			<a href="../game/game.html">Game</a>
 		</nav>
 		<form>
 			<label>Tile character</label>
