--- a/npcEditor/npcEditor.html
+++ b/npcEditor/npcEditor.html
@@ -23,6 +23,8 @@
 			<input type="number" id="attack">
 			<label>Defense</label>
 			<input type="number" id="defense">
+			<label>Hp</label>
+			<input type="number" id="hp">
 		</form>
 		<a id="save">Save npc</a>
 
