--- a/game/game.html
+++ b/game/game.html
@@ -7,6 +7,7 @@
 <script src="../utils.js"></script>
 <script src="../input.js"></script>
 <script src="../npcUtils.js"></script>
+<script src="../utils.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
