cleaned up files and started login

--- a/game/game.html
+++ b/game/game.html
@@ -4,7 +4,7 @@
 <script src="../rot.js"></script>
 <script src="../utils.js"></script>
 <script src="../common.js"></script>
-<script src="../prototype/player.js"></script>
+<script src="player.js"></script>
 <script src="../input.js"></script>
 <script src="../npcUtils.js"></script>
 <script src="game.js"></script>
