--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <title>Javascript Roguelike</title>
-</head>
-<script src="rot.js"></script>
-<body>
-	<script src="common.js"></script>
-	<script src="editor.js"></script>
-	<script src="player.js"></script>
-	<script src="npcs.js"></script>
-	<script src="items.js"></script>
-	<script src="input.js"></script>
-	<script src="tiles.js"></script>
-	<script src="game.js"></script>
-</body>
-</html>
 
+<head>
+	<link rel="stylesheet" type="text/css" href="./styles/common.css">
+</head>
+
+<body>
+	<h1>Roguelike Editor</h1>
+	<nav>
+		<a href="">Login</a>
+		<a href="">Register</a>
+		<a href="">Games</a>
+		<a href="">Editor</a>
+		<a href="">About</a>
+	</nav>
+</body>
+
+</html>
