--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <title>Javascript Roguelike</title>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="./styles/common.css">
+	<link rel="stylesheet" type="text/css" href="../styles/mapEditor.css">
 </head>
 
 <body>
 	<h1>Roguelike Editor</h1>
 	<nav>
-		<a href="">Login</a>
+		<a href="login.html">Login</a>
 		<a href="">Register</a>
 		<a href="">Games</a>
 		<a href="">Editor</a>
-		<a href="">About</a>
 	</nav>
 </body>
 
