added game export and import

--- a/game/game.html
+++ b/game/game.html
@@ -1,6 +1,16 @@
 <title>Javascript Roguelike</title>
+<head>
+<link rel="stylesheet" type="text/css" href="../styles/common.css">
 </head>
 <body>
+<nav>
+<a href="../mapEditor/mapEditor.html">Maps</a>
+<a href="">Player</a>
+<a href="../npcEditor/npcEditor.html">Npcs</a>
+<a href="">Objects</a>
+<a href="../tileEditor/tileEditor.html">Tiles</a>
+<a href="../game/game.html">Game</a>
+</nav>
 <script src="../rot.js"></script>
 <script src="../utils.js"></script>
 <script src="../common.js"></script>
