added map changing

--- a/single_page/editor.html
+++ b/single_page/editor.html
@@ -114,18 +114,24 @@
 				</div>
 
 				<h3>Map editor</h3>
-				<div id="options">
-					<div class="parameters">
-						<label>Map name</label>
-						<input type="text" id="mapName">
-					</div>
-					<button id="map-save" class="save-button">Save</button>
-					<hr></hr>
-					<div id="maps">
-						<!--Maps -->
-					</div>
-					<div id="map-holder">
-					</div>
+				<div class="parameters">
+					<label>Map name</label>
+					<input type="text" id="mapName">
+				</div>
+				<div class="parameters">
+					<span>X</span>
+					<input type="number" id="mapX" class="input-number">
+				</div>
+				<div class="parameters">
+					<span>Y</span>
+					<input type="number" id="mapY" class="input-number">
+				</div>
+				<button id="map-save" class="save-button">Save</button>
+				<hr></hr>
+				<div id="maps">
+					<!--Maps -->
+				</div>
+				<div id="map-holder">
 				</div>
 			</div>
 		</div>
