--- a/game/game.html
+++ b/game/game.html
@@ -11,6 +11,8 @@
 	<script src="../common.js"></script>
 	<script src="game.js"></script>
 	<script src="player.js"></script>
+	<script src="../gameInput.js"></script>
+	<script src="../inventoryInput.js"></script>
 	<script src="../input.js"></script>
 	<script src="../npcUtils.js"></script>
 </body>
