added winning condition text area

--- a/single_page/editor.html
+++ b/single_page/editor.html
@@ -31,9 +31,15 @@
           <input type="number" id="initial-y" class="input-number">
         </div>
         <div class="parameters">
+          <label>Winning conditions</label>
+          <textarea type="Text" id="winningCondition"></textarea>
+        </div>
+        <!--
+        <div class="parameters">
         <label for="file">Import script</label>
         <input class="inputfile" id="file" type='file' accept='text/plain' onchange='openScript(event)'><br>
         </div>
+        !-->
       </div>
       <div class="game-editor">
         <img src="rogueeditor.png" class="header-image"></img>
