fixed map editor and tile editor

--- a/single_page/editor.html
+++ b/single_page/editor.html
@@ -40,7 +40,7 @@
         <h3>Tile editor</h3>
         <div class="parameters">
           <label>Tile character</label>
-          <input type="Text" id="character" size="1" maxLength="1" class="character-input">
+          <input type="Text" id="tile-character" size="1" maxLength="1" class="character-input">
         </div>
         <div class="parameters">
           <label>Description</label>
